--- a/style.css
+++ b/style.css
@@ -11,6 +11,16 @@ height: -webkit-fill-available-
 
 }
 
+.time-slice {
+  display: -webkit-box;
+  -webkit-align-items: strech;
+}
+
+.date.time {
+  -webkit-flex-shrink: 0;
+  -webkit-flex-basis: 100px
+}
+
 body {
     display: absolute;
     align-items: left;
