--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ p{
   text-align: center;
   box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(50px);
+  -webkit-backdrop-filter: blur(50px);
   
 }
 
