--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ textarea:is(:focus, :valid){
 }
 
 
-.textarea::-webkit-scrollbar{
+.textarea: -webkit-scrollbar{
   width: 0px;
   overflow-y: scroll;
 }
